chore: fix left sidebar alignment on large screens

--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -215,6 +215,10 @@
 				@include dimensions("xl") {
 					justify-self: end;
 				}
+
+				@include dimensions("2xl") {
+					justify-self: start;
+				}
 			}
 		}
 
