--- a/style.css
+++ b/style.css
@@ -1685,6 +1685,12 @@ small {
 	}
 }
 
+@media only screen and (min-width: 120em) {
+	.page__aside--first {
+		justify-self: start;
+	}
+}
+
 .page__aside--last {
 	grid-area: page__aside--last;
 }
